--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ ul{
     color: white;
     background-color: red;
     height: 30px;
+    margin-top: 3px;
     font-size: 23px;
     font-weight: bold;
     text-align: center;
